Update QA templates to disable auto rollout

--- a/.openshift/templates/qa.yml
+++ b/.openshift/templates/qa.yml
@@ -90,14 +90,13 @@ objects:
         terminationGracePeriodSeconds: 60
     triggers:
     - imageChangeParams:
-        automatic: true
+        automatic: false
         containerNames:
         - ${APPLICATION_NAME}
         from:
           kind: ImageStreamTag
           name: ${APPLICATION_NAME}:${IMAGE_TAG}
       type: ImageChange
-    - type: ConfigChange
 parameters:
 - description: The name for the application.
   name: APPLICATION_NAME
